# ArborPFA

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.txt  RunFullReconstruction.sh  RunOverlayReconstruction.sh  RunSingleParticleReconstruction.sh  TODO.txt
cmake/: ArborPFAConfig.cmake.in  ArborPFAConfig.h.cmake.in  ArborPFAConfigVersion.cmake.in
doc/: CMakeLists.txt  Doxyfile
example/: ArborSettingsBasic.xml  ArborSettingsReclustering.xml  MarlinXML.xml  OverlayEvent_20_GeV_neutral_30_GeV_charged_10_cm_ArborPFA_MC.slcio  OverlayEvent_20_GeV_neutral_30_GeV_charged_15_cm_ArborPFA_MC.slcio  OverlayEvent_20_GeV_neutral_30_GeV_charged_5_cm_ArborPFA_MC.slcio
ilcsoft/: arbor.py
macros/v01-03-00/: CommonTools.h  OverlayEventPFOAnalysis.C  OverlayEventPFOAnalysis.h  OverlayPurityAnalysis.C  OverlayPurityAnalysis.h  OverlayPurityAnalysis_C.d  SingleParticlePFOAnalysis.C  SingleParticlePFOAnalysis.h  SinglePurityAnalysis.C  SinglePurityAnalysis.h  SinglePurityAnalysis_C.d  TemplateOverlayClass.C  TemplateOverlayClass.h  TemplateSingleClass.C  TemplateSingleClass.h  data_neutralDifferenceProba1Sigma_ArborPFA_Test Beam_10Gev.txt  data_neutralDifferenceProba1Sigma_ArborPFA_Test Beam_20Gev.txt  data_neutralDifferenceProba1Sigma_ArborPFA_Test Beam_30Gev.txt  data_neutralDifferenceProba1Sigma_ArborPFA_Test Beam_40Gev.txt  data_neutralDifferenceProba2Sigma_ArborPFA_Test Beam_10Gev.txt  data_neutralDifferenceProba2Sigma_ArborPFA_Test Beam_20Gev.txt  data_neutralDifferenceProba2Sigma_ArborPFA_Test Beam_30Gev.txt  data_neutralERecDifference_ArborPFA_Test Beam_10Gev.txt  (+36 more)
source/: CMakeLists.txt
source/include/arborpfa/: .gitignore
source/include/arborpfa/algorithm/: ArborAlgorithm.h  ArborAlgorithmFactory.h  ArborClusterConverterAlgorithm.h  ArborConnectorClusteringAlgorithm.h  ArborMonitoringAlgorithm.h  ArborOutputAlgorithm.h  ArborParentAlgorithm.h  ArborReclusteringAlgorithm.h  ConnectorClusteringParentAlgorithm.h  ConnectorParentAlgorithm.h  ConnectorSeedingAlgorithm.h  DummyClusteringAlgorithm.h  EnergyDrivenTrackAssociationAlgorithm.h  HoughTransformAlgorithm.h  IntraLayerClusteringAlgorithm.h  IsolatedHitMergingAlgorithm.h  IsolationTaggingAlgorithm.h  KappaConnectorCleaningAlgorithm.h  MipTrackCandidateTaggingAlgorithm.h  NeutralTreeMergingAlgorithm.h  ObjectCreationParentAlgorithm.h  PfoMonitoringAlgorithm.h  PointingClusterAssociationAlgorithm.h  PrimaryTrackConnectionAlgorithm.h  SimpleObjectCreationAlgorithm.h  SmallClusterMergingAlgorithm.h  SmallNeutralFragmentMergingAlgorithm.h  TopologicalTrackAssociationAlgorithm.h  TreeClusteringAlgorithm.h
source/include/arborpfa/api/: ArborApi.h  ArborApiImpl.h  ArborContentApi.h  ArborContentApiImpl.h  ArborMonitoring.h
source/include/arborpfa/arbor/: AlgorithmHeaders.h  Arbor.h  ArborImpl.h  ArborInternal.h  ArborTypes.h
source/include/arborpfa/content/: ArborHelper.h  ArborObject.h  ArborObjectImpl.h  ArborObjectManager.h  ArborPluginManager.h  Branch.h  CaloHitHelper.h  CaloHitObject.h  Cluster.h  ClusterManager.h  ClusterObject.h  Connector.h  ConnectorImpl.h  ConnectorManager.h  EcalSdhcalEnergyFunction.h  EnergyResolutionHelper.h  IBranchBuilder.h  IConnectable.h  IEnergyEstimator.h  IEnergyFunction.h  IEnergyResolutionFunction.h  ITreeBuilder.h  MetaData.h  MipPointObject.h  Object.h  ObjectManager.h  ReclusterHelper.h  SDHCALEnergyResolutionFunction.h  SDHCALQuadraticEnergyEstimator.h  SdhcalEnergyFunction.h  SimpleBranchBuilder.h  SimpleCaloHitObject.h  SimpleTreeBuilder.h  SmallClusterObject.h  TrackObject.h  Tree.h
source/marlin/: CMakeLists.txt
source/marlin/include/: ArborPFAProcessor.h  ArborPreClusteringProcessor.h  CaloHitCreator.h  GeometryCreator.h  SDHCALArborProcessor.h
source/marlin/src/: ArborPFAProcessor.cc  ArborPreClusteringProcessor.cc  CaloHitCreator.cc  ExternalClusteringAlgorithm.cc  GeometryCreator.cc  MCParticleCreator.cc  PfoCreator.cc  SDHCALArborProcessor.cc  TrackCreator.cc
source/src/algorithm/: ArborAlgorithm.cc  ArborAlgorithmFactory.cc  ArborClusterConverterAlgorithm.cc  ArborConnectorClusteringAlgorithm.cc  ArborMonitoringAlgorithm.cc  ArborOutputAlgorithm.cc  ArborParentAlgorithm.cc  ArborReclusteringAlgorithm.cc  ConnectorClusteringParentAlgorithm.cc  ConnectorParentAlgorithm.cc  ConnectorSeedingAlgorithm.cc  DummyClusteringAlgorithm.cc  EnergyDrivenTrackAssociationAlgorithm.cc  HoughTransformAlgorithm.cc  IntraLayerClusteringAlgorithm.cc  IsolatedHitMergingAlgorithm.cc  IsolationTaggingAlgorithm.cc  KappaConnectorCleaningAlgorithm.cc  MipTrackCandidateTaggingAlgorithm.cc  NeutralTreeMergingAlgorithm.cc  ObjectCreationParentAlgorithm.cc  PfoMonitoringAlgorithm.cc  PointingClusterAssociationAlgorithm.cc  PrimaryTrackConnectionAlgorithm.cc  SimpleObjectCreationAlgorithm.cc  SmallClusterMergingAlgorithm.cc  SmallNeutralFragmentMergingAlgorithm.cc  TopologicalTrackAssociationAlgorithm.cc  TreeClusteringAlgorithm.cc
source/src/api/: ArborApi.cc  ArborApiImpl.cc  ArborContentApi.cc  ArborContentApiImpl.cc  ArborMonitoring.cc
source/src/arbor/: Arbor.cc  ArborImpl.cc
source/src/content/: ArborHelper.cc  ArborObjectImpl.cc  ArborObjectManager.cc  ArborPluginManager.cc  Branch.cc  CaloHitHelper.cc  CaloHitObject.cc  Cluster.cc  ClusterManager.cc  ClusterObject.cc  Connector.cc  ConnectorImpl.cc  ConnectorManager.cc  EcalSdhcalEnergyFunction.cc  EnergyResolutionHelper.cc  MetaData.cc  MipPointObject.cc  Object.cc  ObjectManager.cc  ReclusterHelper.cc  SDHCALEnergyResolutionFunction.cc  SDHCALQuadraticEnergyEstimator.cc  SdhcalEnergyFunction.cc  SimpleBranchBuilder.cc  SimpleCaloHitObject.cc  SimpleTreeBuilder.cc  SmallClusterObject.cc  TrackObject.cc  Tree.cc
xml/: .gitignore  ArborPFASettings.xml  ArborPandoraSettings.xml  ArborPandoraSettings_test.xml  Gear_ILD_o2_v05.xml  MarlinArbor.xml  MarlinArborFull.xml  MarlinCutTestBeamData.xml  MarlinPreClustering.xml  MarlinSDHCAL.xml  PandoraSettingsDefault.xml  SDHCALArborPandoraSettings.xml  SDHCALArborPandoraSettingsBasic.xml  SDHCALArborPandoraSettingsReclustering.xml  SDHCALGearFile.xml  StandardReconstructionPandoraSettings.xml
(+76 files in other folders)
